src/objects/SPE_Scorecard_Report__c.object
<CustomObject>
    <fields>
        <fullName>Business_Line__c</fullName>
        <label>Business Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_Area__c</fullName>
        <label>Category Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_Group__c</fullName>
        <label>Category Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Unit__c</fullName>
        <label>Market Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Period_Text__c</fullName>
        <formula>SPE_Tracker__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Period Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <label>Period</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPE_Report_Parameter__c</fullName>
        <label>SPE Report Parameter</label>
        <referenceTo>SPE_Report_Parameter__c</referenceTo>
        <relationshipLabel>SPE_Scorecard_Report</relationshipLabel>
        <relationshipName>SPE_Scorecard_Report</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SPE_Score__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SPE Score</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SPE_Tracker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SPE Tracker</label>
        <referenceTo>SPE_SPETracker__c</referenceTo>
        <relationshipLabel>SPE_Scorecard_Report</relationshipLabel>
        <relationshipName>SPE_Scorecard_Report</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <label>Score</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SPE_Scorecard_Report</relationshipLabel>
        <relationshipName>SPE_Scorecard_Report</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tracker_Score__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tracker Score</label>
        <referenceTo>SPE_TrackerScore__c</referenceTo>
        <relationshipLabel>SPE_Scorecard_Report</relationshipLabel>
        <relationshipName>SPE_Scorecard_Report</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WeightScore__c</fullName>
        <formula>Score__c  *  Weight__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WeightScore</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>SPE_Scorecard_Report</label>
    <nameField>
        <displayFormat>R-{0000000000}</displayFormat>
        <label>SPE_Scorecard_Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SPE_Scorecard_Report</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>